syntax = "proto3";

package auth;
option go_package = "microservices/auth/proto";

message Error {
	uint32 code = 1; 
}

message SignUpMsg {
	string username = 1; 
	string email = 2; 
	string password = 3; 
	string firstName = 4; 
	string lastName = 5; 
	string sex = 6; 
	string birthDate = 7;
}

message SignUpResponse {
    uint32 userID = 1;
}

message Creds {
	string username = 1;
	string password = 2;
}

message AuthData {
    uint32 id = 1;
    uint32 version = 2;
}

message UserResponse {
    uint32 id = 1;
	uint32 version = 2;
    string username = 3; 
	string email = 4; 
	string passwordHash = 5; 
	string firstName = 6; 
	string lastName = 7; 
	string sex = 8; 
	string birthDate = 9; 
	string avatarSrc = 10;
}

message IncreaseUserVersionMsg {
	uint32 userId = 1;
}

message IncreaseUserVersionResponse {}

message ChangePassMsg {
	uint32 userId = 1;
	string plainPassword = 2;
}

message ChangePassResponse {}

service Authorization {
    rpc SignUpUser(SignUpMsg) returns (SignUpResponse) {};
	rpc GetUserByCreds(Creds) returns (UserResponse) {};
	rpc GetUserByAuthData(AuthData) returns (UserResponse) {};
	rpc IncreaseUserVersion(IncreaseUserVersionMsg) returns (IncreaseUserVersionResponse) {};
	rpc ChangePassword(ChangePassMsg) returns (ChangePassResponse) {};
}
